# AI_Dev_Tools_Hack1

./: .env  .gitignore  README.md  docker-compose.yml  langchain_agent.py  main.py  mcp_server.py  pyproject.toml  shared_models.py  test.py
backend/: app.py  database.py  langchain_agent.py  schemas.py
