[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "fastmcp>=2.13.3",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.1",
    "openai>=2.9.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "telegram>=0.0.1",
]
